09/10/14
-fixed bug related to addition of images to a panel
-fixed deletion of figures (cannot be retroactive unfortunately) that would lose the figur file even if it still exists
-fixed bug in check fonts (font was not loaded properly)

01/10/14
-improved support of one liners (panels that have just one column or one row), it allows to have assymetries in x or y, this strongly increases the ease of use of ScientiFig

01/09/14
-fixed repaint error in send to back and send to front
-added a list to browse ROIs associated to an image
-better handling of options specific of particular shapes (irrelevant options are inactivated when the wrong ROI type is selected)

28/08/14
-updated ROIs (vectorial objects, squares, circles, ...) the objects can now be filled and set to transparent, the new shapes should remain compatible with old ones

21/08/14
-fixed a minor row selection error
-fixed text misalignment in left/right text bars when they contain line breaks

20/08/14
-added support for ROI/annotation copy/paste within an image and between images

12/08/14
-prevents File>Export from generating an "image has not been saved" warning
-fixed changing letter color when pressing "Update letters"

06/08/14
-added a warning if "new"/ctrl+N is pressed and the image has not been saved
-fixed (maybe) erroneous asking for saving the file even when the file is unchanged
-updated and improved the launcher

04/08/14
-restored/improved loggers
-fixed closing errors

23/07/14
-added support for 96bit RGB images

11/07/14
-added the possibility to copy/cut/paste formatted (and colored) text
-minor layout changes/fixes

03/07/14
-Ctrl + S should now be Apple/Command + S on mac OS X (not tested yet)
-fixed minor memory leaks when software is closing

20/06/14
-fixed bugs and serialization errors associated to these external letters.

17/06/14
-added support for letters outside the rows (first try), since many users seem to like to do figures that way

16/05/14