@@ -1,0 +1,55 @@
+/*
+ License ScientiFig (new BSD license)
+
+ Copyright (C) 2012-2014 Benoit Aigouy 
+
+ Redistribution and use in source and binary forms, with or without
+ modification, are permitted provided that the following conditions are
+ met:
+
+ (1) Redistributions of source code must retain the above copyright
+ notice, this list of conditions and the following disclaimer. 
+
+ (2) Redistributions in binary form must reproduce the above copyright
+ notice, this list of conditions and the following disclaimer in
+ the documentation and/or other materials provided with the
+ distribution.  
+    
+ (3)The name of the author may not be used to
+ endorse or promote products derived from this software without
+ specific prior written permission.
+
+ THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR
+ IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+ WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
+ INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+ (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+ SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+ HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+ STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
+ IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ POSSIBILITY OF SUCH DAMAGE.
+ */
+package R;
+
+public class GGplotParser {
+
+    
+    
+    public static void main(String[] args) {
+        //utiliser les regex pr parser à peu pres n'importe quoi comme string    
+        //--> recupérer les parametres et appliquer ttes sorte de changement
+        //--> recup theme, etc...
+        //au cas ou le mec veuille taper lui même son code --> à tester mais je pense pas très dur en fait
+        
+        
+        //pour appliquer les thèmes --> juste besoin de parser en fait ce qui m'intéresse comme les line width etc si l'expression en contient
+        //--> à tester
+        
+        //--> regarder à nouveau comment je gère ça qd manuel ou pas
+        //au moins detecter les erreurs et demander aux gens de les corriger
+        
+        System.exit(0);
+    }
+}
