@@ -821,6 +821,12 @@ public class MyRsession {
      * @return a preview of the plot generated by R
      */
     public BufferedImage getPreview(String plot, int width, int height) {
+        /**
+         * nothing to plot --> return black image
+         */
+        if (plot == null || plot.equals("")) {
+            return null;
+        }
         double width_in_inches = (float) width / 72f;
         double height_in_inches = (float) height / 72f;
         if (plot.contains(";")) {
